[package]
name = "bitcoin-price-getter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["rt", "rt-multi-thread", "macros", "sync"] }
